# ai_tester

./: .gitignore  CONTRIBUTING.md  README.en.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
ai_tester/: __init__.py  api_executor.py  browser_executor.py  cli.py  config.py  docs.py  llm_agent.py  models.py  runner.py  step_executors.py  suites.py  templates.py
ai_tester/templates/: config_default.yaml  example_suite.yaml
examples/features/: feature_auth.md  feature_profile.md
examples/tests/: Авторизация-checklist.md  Авторизация.yaml  Профиль.yaml
tests/: test_cli_basic.py  test_config.py  test_llm_agent_extract_json.py  test_runner_basic.py  test_suites.py
